metadata/force-app/main/default/objects/CustomName_Nmfxh__c/CustomName_Nmfxh__c.object-meta.xml
<CustomObject>
    <description>Description_BGoSI</description>
    <label>CustomLabel_SQbQB</label>
    <nameField>
        <label>CustomLabel_SQbQB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_SQbQBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>