metadata/force-app/main/default/objects/CustomName_Nmfxh__c/fields/CustomField_igmSK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_igmSK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmOjvp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>